# jl-data

./: .gitignore  CMakeLists.txt  README.md  ght.sln  ght.vcxproj  rebuild.sh  settings.csv
cleaner/: cleaner.cpp
data/: apitokens.csv  output.csv  projects-julia.csv
data/files/: 10.raw  162.raw  163.raw  5.raw  7.raw  9.raw  files.tar.xz
data/files/1/: 1084.raw  1433.raw  1460.raw  1494.raw  1498.raw  1500.raw  1502.raw  1504.raw  1507.raw  1509.raw  1512.raw  1516.raw  1519.raw  1524.raw  1528.raw  1531.raw  1535.raw  1541.raw  1547.raw  1550.raw  1553.raw  1561.raw  1569.raw  1675.raw  1684.raw  1696.raw  1702.raw  files.tar.xz
data/files/10/: 10038.raw  10529.raw  10532.raw  10535.raw  10538.raw  10540.raw  10542.raw  10545.raw  10548.raw  10550.raw  10553.raw  10557.raw  10559.raw  10563.raw  10565.raw  10568.raw  10571.raw  10574.raw  10575.raw  10577.raw  10580.raw  10582.raw  10584.raw  10587.raw  10590.raw  10593.raw  10596.raw  10601.raw  10960.raw  files.tar.xz
data/files/100/: 100015.raw  100017.raw  100020.raw  100022.raw  100024.raw  100026.raw  100029.raw  100031.raw  100032.raw  100034.raw  100035.raw  100037.raw  100039.raw  100040.raw  100041.raw  100042.raw  100043.raw  100044.raw  100046.raw  100047.raw  (+102 more)
data/stats/: failedProjects.csv  projects.csv  runs.csv
downloader/: downloader.cpp  downloader.cpp.autosave  git.cpp  git.h
include/: csv.h  exec.cpp  exec.h  filesystem.cpp  filesystem.h  hash.cpp  hash.h  pattern_lists.h  settings.cpp  settings.h  utils.h  worker.cpp  worker.h
scripts/: Static.jl  basic_counts.jl  data_navigation.jl
(+58775 files in other folders)
